--- a/app/Resources/views/main/main.html.twig
+++ b/app/Resources/views/main/main.html.twig
@@ -5,11 +5,17 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset('css/main_styles.css') }}">
     </head>
     <body>
-        {% block header %}{% endblock %}
+        <header>
+            {% block header %}
+                header
+            {% endblock %}
+        </header>
+        {% block greetings %}{% endblock %}
         {% block body %}{% endblock %}
-        <script src="{{ asset('js/jquery-2.2.1.min.js') }}"></script>
+        <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
         <script src="{{ asset('js/custom_script.js') }}"></script>
     </body>
 </html>
