--- a/app/Resources/views/personal_area/personal_area.html.twig
+++ b/app/Resources/views/personal_area/personal_area.html.twig
@@ -5,10 +5,14 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset('css/personal_area_styles.css') }}">
     </head>
     <body>
+        <header>
+            {% block header %}{% endblock %}
+        </header>
         {% block body %}{% endblock %}
-        <script src="{{ asset('js/jquery-2.2.1.min.js') }}"></script>
+        <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
         <script src="{{ asset('js/custom_script.js') }}"></script>
     </body>
 </html>
