start findlost form

--- a/web/css/personal_area_styles.css
+++ b/web/css/personal_area_styles.css
@@ -36,3 +36,10 @@ table {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+#city,
+#area,
+#button_next,
+#street{
+    display: none;
+}
