--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -10,7 +10,7 @@
     <body>
         {% block header %}{% endblock %}
         {% block body %}{% endblock %}
-        <script src="{{ asset('jquery-1.12.1.min.js') }}"></script>
+        <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
         <script src="{{ asset('js/custom_script.js') }}"></script>
     </body>
 </html>
