--- a/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
+++ b/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
@@ -29,7 +29,8 @@
         </p>
 
         <p>
-            <input type="text" name="custom_thing" id="custom_thing" placeholder="custom_thing">
+            <input type="text" list="list_thing" name="custom_thing" id="custom_thing" placeholder="custom_thing">
+            <datalist id="list_thing"></datalist>
         </p>
         <p>
             <input type="file" name="image_thing" id="image_thing">
