--- a/src/AdminBundle/Resources/views/find/show.html.twig
+++ b/src/AdminBundle/Resources/views/find/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Thing</th>
-                <td>{{ find.nameThing }}</td>
+                <td>{{ find.thing }}</td>
             </tr>
             <tr>
                 <th>Description</th>
