--- a/src/AdminBundle/Resources/views/thing/show.html.twig
+++ b/src/AdminBundle/Resources/views/thing/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Namething</th>
-                <td>{{ thing.nameThing }}</td>
+                <td>{{ thing.thing }}</td>
             </tr>
         </tbody>
     </table>
