--- a/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
+++ b/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
@@ -36,6 +36,9 @@
             <input type="file" name="image_thing" id="image_thing">
         </p>
         <p>
+            <textarea id="description" spellcheck="false"></textarea>
+        </p>
+        <p>
             <button type="button" id="button_next2">Next</button>
         </p>
         <p>
