--- a/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
+++ b/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
@@ -29,7 +29,7 @@
         </p>
 
         <p>
-            <input type="text" list="list_thing" name="custom_thing" id="custom_thing" placeholder="custom_thing">
+            <input type="text" list="list_thing" name="custom_thing" id="custom_thing" placeholder="custom_thing" autocomplete="off">
             <datalist id="list_thing"></datalist>
         </p>
         <p>
