--- a/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
+++ b/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
@@ -17,12 +17,18 @@
             <input type="text" list="list_area" name="area" id="area" placeholder="area" autocomplete="off">
             <datalist id="list_area"></datalist>
         </p>
+        <p id="example_area">
+            Пример: Московский р-н или Минская обл.
+        </p>
         <p>
             <button type="button" id="button_next">Next</button>
         </p>
         <p>
             <input type="text" list="list_street" id="street" name="street" placeholder="street" autocomplete="off">
             <datalist id="list_street"></datalist>
+        </p>
+        <p id="example_street">
+            Пример: Лермонтова ул. или Победителей пр.
         </p>
         <p>
             <select name="thing" id="thing"></select>
