--- a/web/css/personal_area_styles.css
+++ b/web/css/personal_area_styles.css
@@ -45,6 +45,8 @@ table {
 #thing,
 #image_thing,
 #custom_thing,
-#description{
+#description,
+#example_area,
+#example_street{
     display: none;
 }
