--- a/app/Resources/views/main/main.html.twig
+++ b/app/Resources/views/main/main.html.twig
@@ -8,12 +8,11 @@
         <link rel="stylesheet" href="{{ asset('css/main_styles.css') }}">
     </head>
     <body>
-        <header>
-            {% block header %}
-                header
-            {% endblock %}
+        <header id="header">
+            <div id="dots_layer">
+                {% block header %}{% endblock %}
+            </div>
         </header>
-        {% block greetings %}{% endblock %}
         {% block body %}{% endblock %}
         <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
         <script src="{{ asset('js/custom_script.js') }}"></script>
