--- a/src/MainBundle/Resources/views/layout.html.twig
+++ b/src/MainBundle/Resources/views/layout.html.twig
@@ -1,11 +1,24 @@
 {% extends '::main/main.html.twig' %}
-{% block greetings %}
-    <div>
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-            {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-            <a href="{{ path('fos_user_security_logout') }}">
-                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-            </a>
+{% block header %}
+    <div id="greetings">
+        <span>
+        {% if user_logged_in == false %}
+            <a id="login" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+            <a id="register" href="{{ url('fos_user_registration_register') }}">Register</a>
+            <a id="forgot_password" href="{{ url('fos_user_resetting_request') }}">Forgot password?</a>
+        {% else %}
+            <a class="start_link" href="{{ url('personal_area_index') }}">Personal Area</a>
         {% endif %}
+        </span>
+        <span>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
+            {% endif %}
+        </span>
+    </div>
+    <div>
+        <a class="start_link" href="{{ url('personal_area', { 'action': 'lost' }) }}">I lost</a>
+        <a class="start_link" href="{{ url('personal_area', { 'action': 'find' }) }}">I find</a>
     </div>
 {% endblock %}
