upgrade data form

--- a/src/MainBundle/Resources/views/layout.html.twig
+++ b/src/MainBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
         </span>
     </div>
     <div id="find_lost_links">
-        <a class="start_link" id="lost" href="{{ url('personal_area', { 'action': 'lost' }) }}">I lost</a>
-        <a class="start_link" id="find" href="{{ url('personal_area', { 'action': 'find' }) }}">I find</a>
+        <a id="lost" class="start_link" href="{{ url('personal_area', { 'action': 'lost' }) }}">I lost</a>
+        <a id="find" class="start_link" href="{{ url('personal_area', { 'action': 'find' }) }}">I find</a>
     </div>
 {% endblock %}
