--- a/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
+++ b/src/PersonalAreaBundle/Resources/views/default/find-lost.html.twig
@@ -20,10 +20,17 @@
             </datalist>
         </p>
         <p>
-            <button type="button" id="button_next0">Next</button>
+            <button type="button" id="button_next1">Next</button>
         </p>
         <p>
             <select name="city" id="city"></select>
+        </p>
+        <p>
+            <input type="text" list="list_city" name="custom_city" id="custom_city" placeholder="custom_city" autocomplete="off">
+            <datalist id="list_city"></datalist>
+        </p>
+        <p>
+            <button type="button" id="button_next2">Next</button>
         </p>
         <p>
             <input type="text" list="list_area" name="area" id="area" placeholder="area" autocomplete="off">
@@ -33,7 +40,7 @@
             Пример: Московский р-н или Минская обл.
         </p>
         <p>
-            <button type="button" id="button_next">Next</button>
+            <button type="button" id="button_next3">Next</button>
         </p>
         <p>
             <input type="text" list="list_street" id="street" name="street" placeholder="street" autocomplete="off">
@@ -56,7 +63,7 @@
             <textarea id="description" name="description" spellcheck="false"></textarea>
         </p>
         <p>
-            <button type="button" id="button_next2">Next</button>
+            <button type="button" id="button_next4">Next</button>
         </p>
         <p>
             <input type="submit" name="submit" id="form_submit">
