--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -11,6 +11,6 @@
         {% block header %}{% endblock %}
         {% block body %}{% endblock %}
         <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
-        <script src="{{ asset('js/custom_script.js') }}"></script>
+        <script src="{{ asset('js/admin_script.js') }}"></script>
     </body>
 </html>
