--- a/app/Resources/views/personal_area/personal_area.html.twig
+++ b/app/Resources/views/personal_area/personal_area.html.twig
@@ -13,6 +13,6 @@
         </header>
         {% block body %}{% endblock %}
         <script src="{{ asset('js/jquery-1.12.1.min.js') }}"></script>
-        <script src="{{ asset('js/custom_script.js') }}"></script>
+        <script src="{{ asset('js/personal_area_script.js') }}"></script>
     </body>
 </html>
