--- a/src/AdminBundle/Resources/views/default/index.html.twig
+++ b/src/AdminBundle/Resources/views/default/index.html.twig
@@ -1,5 +1,7 @@
 {% extends '::admin/admin.html.twig' %}
 
+
+{% block title %}Admin panel{% endblock %}
 {% block header %}
     <a href="{{ url('admin_country_index') }}">Country</a>
     <a href="{{ url('admin_city_index') }}">City</a>
