--- a/src/MainBundle/Resources/views/layout.html.twig
+++ b/src/MainBundle/Resources/views/layout.html.twig
@@ -1,4 +1,6 @@
 {% extends '::main/main.html.twig' %}
+
+{% block title %}Home{% endblock %}
 {% block header %}
     <div id="greetings">
         <span>
